--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="random.css">
+    <link rel="stylesheet" href="classes.css">
 </head>
 
 <body>
